Added language flags

--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
   <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:500,700" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Muli:400,400i,800,800i" rel="stylesheet">
   <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/flag-icon-css/3.4.3/css/flag-icon.css" rel="stylesheet">
+
+    <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
+
 
   <!-- Custom styles for this template -->
   <link href="css/resume.css" rel="stylesheet">
@@ -72,7 +75,7 @@
         <div class="subheading mb-5">Linköping, Sweden ·
           <a href="#">joakim[at]argillander.se</a>
         </div>
-        <p class="lead mb-5">Graduate student in computer science and engineering. Passionate about cybersecurity, Internet of Things and intelligent vehicular systems. </p>
+        <p class="lead mb-5">Graduate student in computer science and engineering. My main interests are cybersecurity, Internet of Things and intelligent vehicular systems (ITS ETSI). </p>
         <div class="social-icons">
           <a href="https://linkedin.com/in/joakimargillander">
             <i class="fab fa-linkedin-in"></i>
@@ -83,6 +86,10 @@
           <a href="https://facebook.com/joakimargillander">
             <i class="fab fa-facebook-f"></i>
           </a>
+
+            <a href="assets/Resume_Joakim_Argillander.pdf">
+                <i class="far fa-file-pdf"></i>
+            </a>
         </div>
       </div>
     </section>
@@ -200,10 +207,10 @@
           <div class="w-100">
               <h2 class="mb-5">Languages</h2>
 
-              <div class="subheading mb-5">Swedish - native speaker</div>
-              <div class="subheading mb-5">English - fluent</div>
-              <div class="subheading mb-5">Finnish - conversational</div>
-              <div class="subheading mb-5">German - basic knowledge</div>
+              <div class="subheading mb-5"><i class="flag-icon flag-icon-se"></i>Swedish - native speaker</div>
+              <div class="subheading mb-5"><i class="flag-icon flag-icon-gb"> </i>English - fluent</div>
+              <div class="subheading mb-5"><i class="flag-icon flag-icon-fi"></i> Finnish - conversational</div>
+              <div class="subheading mb-5"><i class="flag-icon flag-icon-de"></i> German - basic knowledge</div>
 
 
           </div>
