Updated Master's thesis experience and resumé.

--- a/index.html
+++ b/index.html
@@ -22,6 +22,16 @@
     <link rel="stylesheet"
           href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
 
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-48162518-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-48162518-1');
+    </script>
+
 
     <!-- Custom styles for this template -->
     <link href="css/resume.css" rel="stylesheet">
@@ -80,7 +90,7 @@
             <div class="subheading mb-5">Linköping, Sweden ·
                 <a href="#">joakim[at]argillander.se</a>
             </div>
-            <p class="lead mb-5">Graduate student in computer science and engineering.
+            <p class="lead mb-5">Master's student in computer science and engineering.
             <br>
             <br>
             My main interests are
@@ -96,6 +106,9 @@
 
                 <a href="https://github.com/argillander">
                     <i class="fab fa-github"></i>
+                </a>
+                <a href="https://stackoverflow.com/users/4083398/argillander">
+                    <i class="fab fa-stack-overflow"></i>
                 </a>
 
                 <a href="assets/Resume_Joakim_Argillander.pdf">
@@ -123,6 +136,16 @@
                       </div>
                     </div>
             -->
+            <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+                <div class="resume-content">
+                    <h3 class="mb-0">Master's Thesis Project</h3>
+                    <div class="subheading mb-3">Division of Information Coding, Dpt. of E.E., Linköping University, Linköping</div>
+                    <p>Currently investigating active phase compensation in a Mach-Zehnder interferometer for use in quantum key distribution. The aim of my project is to stabilise a QKD system with respect to low-frequency environmental thermal noise. The project involves hardware development and automatic control using FPGA’s</p>
+                </div>
+                <div class="resume-date text-md-right">
+                    <span class="text-primary">January 2020 - present</span>
+                </div>
+            </div>
 
             <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
                 <div class="resume-content">
@@ -136,7 +159,7 @@
                         internship I also supervised summer interns.</p>
                 </div>
                 <div class="resume-date text-md-right">
-                    <span class="text-primary">April 2018 - December 2019</span>
+                    <span class="text-primary">April 2018 - January 2020</span>
                 </div>
             </div>
 
@@ -183,7 +206,7 @@
             <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
                 <div class="resume-content">
                     <h3 class="mb-0">Linköping University </h3>
-                    <div class="subheading mb-3">Master of Science and Engineering</div>
+                    <div class="subheading mb-3">Master of Science and Engineering (Secure Systems)</div>
                     <div>Courses including Computer-, and Information Security and Cryptology. Alongside these courses
                         are
                         many project courses where theory is applied in practice that has taught the specific
