--- a/index.html
+++ b/index.html
@@ -62,6 +62,8 @@
             <li class="nav-item">
                 <a class="nav-link js-scroll-trigger" href="#education">Education</a>
             </li>
+
+
             <li class="nav-item">
                 <a class="nav-link js-scroll-trigger" href="#languages">Languages</a>
             </li>
@@ -141,9 +143,10 @@
                     <h3 class="mb-0">Master's Thesis Project</h3>
                     <div class="subheading mb-3">Division of Information Coding, Dpt. of E.E., Linköping University, Linköping</div>
                     <p>Currently investigating active phase compensation in a Mach-Zehnder interferometer for use in quantum key distribution. The aim of my project is to stabilise a QKD system with respect to low-frequency environmental thermal noise. The project involves hardware development and automatic control using FPGA’s</p>
+
                 </div>
                 <div class="resume-date text-md-right">
-                    <span class="text-primary">January 2020 - present</span>
+                    <span class="text-primary">January 2020 - June 2020</span>
                 </div>
             </div>
 
