--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Joakim Argillander - aspiring computer engineer</title>
+    <title>Joakim Argillander - computer engineer</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -44,7 +44,7 @@
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
         <span class="d-block d-lg-none">Joakim Argillander</span>
         <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/pic.PNG" alt="">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profile_square.jpg" alt="">
       </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -61,6 +61,10 @@
             </li>
             <li class="nav-item">
                 <a class="nav-link js-scroll-trigger" href="#education">Education</a>
+            </li>
+
+            <li class="nav-item">
+                <a class="nav-link js-scroll-trigger" href="#publications">Publications</a>
             </li>
 
 
@@ -92,12 +96,65 @@
             <div class="subheading mb-5">Linköping, Sweden ·
                 <a href="#">joakim[at]argillander.se</a>
             </div>
-            <p class="lead mb-5">Master's student in computer science and engineering.
+            <p class="lead mb-5">Engineer (M.Sc., <i>civilingenjör</i>) and cybersecurity enthusiast. Currently looking for every opportunity to delve into the latest and greatest in information coding and novel information security schemes.
+            <br>
+            <p class="lead mb-5">
+            Shoot me an email or contact me on any of the networks below.
+
+            <p>
+        </p>
+            <div id="pgpkey" class="collapse">
+                <p class="code-block">
+                    <br>
+                    -----BEGIN PGP PUBLIC KEY BLOCK-----
+                    <br />
+                    <br />
+                    mQENBF4AsjMBCADO/Z3m5o+CAr9WkE8LE8ktbe0DMzJAzx/hQXyH8vwUk4+zvyeT
+                    LYYrJA80gfiWfoT9xBBHAul+EHV3HH18wHPeF0/dTj2wKK8lnF92bTDweMCNNv4s
+                    agziLc1xzdKwddhq3gYDSKaCgcln6bynEELzBUHa+0TPNApiWHYbz5qisYNXMkzv
+                    TaTynKTUj2JhHaZt8CAfzR6K0Y9mnatrsL1E8Jhhcj4I3F47pnNDxYjXwEjTPh9l
+                    8cO/f2HldAkLbDhT5NFujfdYgashNOe58KxzeKQMyIugZWYv95yStkKG6sk+CnPu
+                    RRGFfy8j92xWIP1QplQclhSo/arfwx2Pd4W7ABEBAAG0NUpvYWtpbSBBcmdpbGxh
+                    bmRlciAoTWFpbiBrZXkpIDxqb2FraW1AYXJnaWxsYW5kZXIuc2U+iQFOBBMBCAA4
+                    FiEEyY4lHpP9F47rVbqOVAhj0MhGIyAFAl4AsjMCGwMFCwkIBwIGFQoJCAsCBBYC
+                    AwECHgECF4AACgkQVAhj0MhGIyDX6AgAj0zdhFYWjMzvv3T3pfuBIAaFXilrG1Rl
+                    PtZbkiNDYJKhbImLSDoFIXmy5CN+slkJXKcWAyO0XMiir7wZheC+z4jYbg7NZb93
+                    /l4+tWzVsmfZHzfGjG8biWD4ZIH7fP4vLn4SfG1oFRPTQcLlrYK5fWY35x98Ygkm
+                    b2aME0Fi8dWncWlWzPxtqIvZhx6J/ZCCjO6effGN0apaJvg5hkPa2jItvjBu57Ur
+                    RJvOJ+ajWOvpvbxjzD0IBeRQ6AksEScocq8zMKqWARYlbulGurmtVysS8XA2phje
+                    FpUuuYV1N0H1HK4O9tZZkGPUhF+rDcI7d51ApHkHBZgFGpcLDsJCYbkBDQReALIz
+                    AQgAxLtXWdwznKJl5txjz7RTKO4s+ytfKvyyl8U0EknkkSQLUWtT8o+i29udyCl4
+                    o8lMv0LlKkok5i7vMZe0H2/RCyO7BwwytJoQm7rt6YguqbHpGEj6EJ6gdrC0rzjX
+                    KQsyN6Q6t//kWiWsw1oRkxmkTsGSgO/mgXzfxiLXHL8XAp+puAcg24thBsGrFGdt
+                    T99M5MKaycJLPPJI+dhCMiyfflz+6rM1hECz7QibAgH1bT+bjQ4oOLVcco105kG4
+                    pERAdF8p4DXdRkxxGwXoQVAWVucO9+wGD0l6sSSiOtAlynmGUPsGhYqCcipSEQdH
+                    iq9FZBNdCusF0KU1t38Ssj67TQARAQABiQE2BBgBCAAgFiEEyY4lHpP9F47rVbqO
+                    VAhj0MhGIyAFAl4AsjMCGwwACgkQVAhj0MhGIyAVhQf/b/98Nez8RaJN7PFn2AQv
+                    NknhQqrJjLcHFazcEJk7lslY6m/Udh4QRZdyxPgAzLthFEPU84O7deqx+u+CPGnz
+                    GPQenM+4lrxGNcR3b4qNHEwM+Uf8w/yDaZCHbpCfbJ91iF+aPEERqpcZ3/Sk+lfo
+                    epmmj3E7D6uU6jIPLbw1SBQcPx/SNpVgK5awh5kY4KZc0WRrmcxzhFYYfh+v9oY1
+                    gEwvrsjbmnJN3VEBpm9vTtsSxrNgkC+cMeK2iVn3xSt9kKRq7y8m49+LzJ9PzFM0
+                    +T3eECkKEYu3Usvxy2v+Tm0SM3aZTAbL5T4xH038mr5kRZ356iSzQAv1ysoby8q4<br />
+                    Vw==<br />
+                    =6k+d<br /><br />
+                    -----END PGP PUBLIC KEY BLOCK-----
+                    <br>
+
+                </p>
+            </div>
+            <p><br />
             <br>
             <br>
-            My main interests are
-                cybersecurity, Internet of Things and intelligent vehicular systems (ITS ETSI). </p>
+
+        </p>
+
+
+
+
             <div class="social-icons">
+                <a href="#pgpkey"  data-toggle="collapse">
+                    <i class="fas fa-key"></i>
+                </a>
                 <a href="https://linkedin.com/in/joakimargillander">
                     <i  class="fab fa-linkedin-in"></i>
                 </a>
@@ -116,6 +173,7 @@
                 <a href="assets/Resume_Joakim_Argillander.pdf">
                     <i class="far fa-file-pdf"></i>
                 </a>
+
 
             </div>
         </div>
@@ -208,8 +266,8 @@
 
             <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
                 <div class="resume-content">
-                    <h3 class="mb-0">Linköping University </h3>
-                    <div class="subheading mb-3">Master of Science and Engineering (Secure Systems)</div>
+                    <h3 class="mb-0">Master of Science in Computer Science and Engineering (Secure Systems)</h3>
+                    <div class="subheading mb-3">Linköping University</div>
                     <div>Courses including Computer-, and Information Security and Cryptology. Alongside these courses
                         are
                         many project courses where theory is applied in practice that has taught the specific
@@ -219,14 +277,14 @@
                     <!--  <p>GPA</p> -->
                 </div>
                 <div class="resume-date text-md-right">
-                    <span class="text-primary">August 2014 - present</span>
+                    <span class="text-primary">August 2014 - June 2020</span>
                 </div>
             </div>
 
             <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
                 <div class="resume-content">
-                    <h3 class="mb-0">ABB Industrial High School</h3>
-                    <div class="subheading mb-3">Technical Programme</div>
+                    <h3 class="mb-0">Technical Programme</h3>
+                    <div class="subheading mb-3">ABB Industrial High School</div>
                     <div>Courses aimed towards technical design in subjects such as Mechatronics, CAD, PCB-design and
                         manufacturing as well as Digital Electronics.
                     </div>
@@ -241,6 +299,17 @@
 
     </section>
 
+
+
+    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="publications">
+        <div class="w-100">
+            <h2 class="mb-5">Publications</h2>
+            <div class="subheading mb-5"><a target="_blank" href="http://urn.kb.se/resolve?urn=urn:nbn:se:liu:diva-166419">Active Phase Compensation in a Fiber-Optical Mach-Zehnder Interferometer</a> - (M.Sc. thesis)</div>
+
+
+
+        </div>
+    </section>
 
     <hr class="m-0">
 
